# Sandpile-Model

./: CMakeLists.txt  README.md  main.cpp
lib/args/: CMakeLists.txt  args.cpp  args.h
lib/array/: array.hpp
lib/bmp/: CMakeLists.txt  bmp.cpp  bmp.h
lib/sandpile/: CMakeLists.txt  sandpile.cpp  sandpile.h
